--- a/style_web.css
+++ b/style_web.css
@@ -44,13 +44,13 @@ body{
 }
 
 .into-img{
-    width: 20%;
+    width: 10%;
     border-radius: 50%;
     
 }
 
 svg{
-    width: 80rem;
+    width: 100vw;
     font-size: 50px;
     font-weight: 900;
 }
@@ -364,8 +364,15 @@ cursor: pointer;
     padding-bottom: 10rem;
     position: relative;
     height: 80vh;
-    background: url('images/img29.png') no-repeat;
-    background-size: cover;
+}
+
+.video-link{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 80vh;
+    object-fit: cover;
+    z-index: -100;
 }
 .home .content{
     text-align: center;
